// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should work for all qualifiers 1`] = `
<NavBarTabs>
  <li>
    <Link
      activeClassName="active"
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/dashboard",
          "query": Object {
            "branch": undefined,
            "id": "foo",
          },
        }
      }
    >
      overview.page
    </Link>
  </li>
  <li>
    <Link
      activeClassName="active"
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/project/issues",
          "query": Object {
            "branch": undefined,
            "id": "foo",
            "resolved": "false",
          },
        }
      }
    >
      issues.page
    </Link>
  </li>
  <li>
    <Link
      activeClassName="active"
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/component_measures",
          "query": Object {
            "branch": undefined,
            "id": "foo",
          },
        }
      }
    >
      layout.measures
    </Link>
  </li>
  <li>
    <Link
      activeClassName="active"
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/code",
          "query": Object {
            "branch": undefined,
            "id": "foo",
          },
        }
      }
    >
      code.page
    </Link>
  </li>
  <li>
    <Link
      activeClassName="active"
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/project/activity",
          "query": Object {
            "branch": undefined,
            "id": "foo",
          },
        }
      }
    >
      project_activity.page
    </Link>
  </li>
  <li
    className="dropdown"
  >
    <a
      className="dropdown-toggle"
      data-toggle="dropdown"
      href="#"
      id="component-navigation-admin"
    >
      layout.settings
       
      <i
        className="icon-dropdown"
      />
    </a>
    <ul
      className="dropdown-menu"
    >
      <li
        key="settings"
      >
        <Link
          activeClassName="active"
          onlyActiveOnIndex={false}
          style={Object {}}
          to={
            Object {
              "pathname": "/project/settings",
              "query": Object {
                "branch": undefined,
                "id": "foo",
              },
            }
          }
        >
          project_settings.page
        </Link>
      </li>
      <li
        key="branches"
      >
        <Link
          activeClassName="active"
          onlyActiveOnIndex={false}
          style={Object {}}
          to={
            Object {
              "pathname": "/project/branches",
              "query": Object {
                "id": "foo",
              },
            }
          }
        >
          project_branches.page
        </Link>
      </li>
      <li
        key="project_delete"
      >
        <Link
          activeClassName="active"
          onlyActiveOnIndex={false}
          style={Object {}}
          to={
            Object {
              "pathname": "/project/deletion",
              "query": Object {
                "id": "foo",
              },
            }
          }
        >
          deletion.page
        </Link>
      </li>
    </ul>
  </li>
</NavBarTabs>
`;

exports[`should work for all qualifiers 2`] = `
<NavBarTabs>
  <li>
    <Link
      activeClassName="active"
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/dashboard",
          "query": Object {
            "branch": undefined,
            "id": "foo",
          },
        }
      }
    >
      overview.page
    </Link>
  </li>
  <li>
    <Link
      activeClassName="active"
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/project/issues",
          "query": Object {
            "branch": undefined,
            "id": "foo",
            "resolved": "false",
          },
        }
      }
    >
      issues.page
    </Link>
  </li>
  <li>
    <Link
      activeClassName="active"
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/component_measures",
          "query": Object {
            "branch": undefined,
            "id": "foo",
          },
        }
      }
    >
      layout.measures
    </Link>
  </li>
  <li>
    <Link
      activeClassName="active"
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/code",
          "query": Object {
            "branch": undefined,
            "id": "foo",
          },
        }
      }
    >
      code.page
    </Link>
  </li>
  <li>
    <Link
      activeClassName="active"
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/project/activity",
          "query": Object {
            "branch": undefined,
            "id": "foo",
          },
        }
      }
    >
      project_activity.page
    </Link>
  </li>
  <li
    className="dropdown"
  >
    <a
      className="dropdown-toggle"
      data-toggle="dropdown"
      href="#"
      id="component-navigation-admin"
    >
      layout.settings
       
      <i
        className="icon-dropdown"
      />
    </a>
    <ul
      className="dropdown-menu"
    >
      <li
        key="settings"
      >
        <Link
          activeClassName="active"
          onlyActiveOnIndex={false}
          style={Object {}}
          to={
            Object {
              "pathname": "/project/settings",
              "query": Object {
                "branch": undefined,
                "id": "foo",
              },
            }
          }
        >
          project_settings.page
        </Link>
      </li>
    </ul>
  </li>
</NavBarTabs>
`;

exports[`should work for all qualifiers 3`] = `
<NavBarTabs>
  <li>
    <Link
      activeClassName="active"
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/portfolio",
          "query": Object {
            "branch": undefined,
            "id": "foo",
          },
        }
      }
    >
      overview.page
    </Link>
  </li>
  <li>
    <Link
      activeClassName="active"
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/project/issues",
          "query": Object {
            "branch": undefined,
            "id": "foo",
            "resolved": "false",
          },
        }
      }
    >
      issues.page
    </Link>
  </li>
  <li>
    <Link
      activeClassName="active"
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/component_measures",
          "query": Object {
            "branch": undefined,
            "id": "foo",
          },
        }
      }
    >
      layout.measures
    </Link>
  </li>
  <li>
    <Link
      activeClassName="active"
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/code",
          "query": Object {
            "branch": undefined,
            "id": "foo",
          },
        }
      }
    >
      view_projects.page
    </Link>
  </li>
  <li>
    <Link
      activeClassName="active"
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/project/activity",
          "query": Object {
            "branch": undefined,
            "id": "foo",
          },
        }
      }
    >
      project_activity.page
    </Link>
  </li>
  <li
    className="dropdown"
  >
    <a
      className="dropdown-toggle"
      data-toggle="dropdown"
      href="#"
      id="component-navigation-admin"
    >
      layout.settings
       
      <i
        className="icon-dropdown"
      />
    </a>
    <ul
      className="dropdown-menu"
    >
      <li
        key="project_delete"
      >
        <Link
          activeClassName="active"
          onlyActiveOnIndex={false}
          style={Object {}}
          to={
            Object {
              "pathname": "/project/deletion",
              "query": Object {
                "id": "foo",
              },
            }
          }
        >
          deletion.page
        </Link>
      </li>
    </ul>
  </li>
</NavBarTabs>
`;

exports[`should work for all qualifiers 4`] = `
<NavBarTabs>
  <li>
    <Link
      activeClassName="active"
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/portfolio",
          "query": Object {
            "branch": undefined,
            "id": "foo",
          },
        }
      }
    >
      overview.page
    </Link>
  </li>
  <li>
    <Link
      activeClassName="active"
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/project/issues",
          "query": Object {
            "branch": undefined,
            "id": "foo",
            "resolved": "false",
          },
        }
      }
    >
      issues.page
    </Link>
  </li>
  <li>
    <Link
      activeClassName="active"
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/component_measures",
          "query": Object {
            "branch": undefined,
            "id": "foo",
          },
        }
      }
    >
      layout.measures
    </Link>
  </li>
  <li>
    <Link
      activeClassName="active"
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/code",
          "query": Object {
            "branch": undefined,
            "id": "foo",
          },
        }
      }
    >
      view_projects.page
    </Link>
  </li>
  <li>
    <Link
      activeClassName="active"
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/project/activity",
          "query": Object {
            "branch": undefined,
            "id": "foo",
          },
        }
      }
    >
      project_activity.page
    </Link>
  </li>
</NavBarTabs>
`;

exports[`should work for all qualifiers 5`] = `
<NavBarTabs>
  <li>
    <Link
      activeClassName="active"
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/dashboard",
          "query": Object {
            "branch": undefined,
            "id": "foo",
          },
        }
      }
    >
      overview.page
    </Link>
  </li>
  <li>
    <Link
      activeClassName="active"
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/project/issues",
          "query": Object {
            "branch": undefined,
            "id": "foo",
            "resolved": "false",
          },
        }
      }
    >
      issues.page
    </Link>
  </li>
  <li>
    <Link
      activeClassName="active"
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/component_measures",
          "query": Object {
            "branch": undefined,
            "id": "foo",
          },
        }
      }
    >
      layout.measures
    </Link>
  </li>
  <li>
    <Link
      activeClassName="active"
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/code",
          "query": Object {
            "branch": undefined,
            "id": "foo",
          },
        }
      }
    >
      view_projects.page
    </Link>
  </li>
  <li>
    <Link
      activeClassName="active"
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/project/activity",
          "query": Object {
            "branch": undefined,
            "id": "foo",
          },
        }
      }
    >
      project_activity.page
    </Link>
  </li>
  <li
    className="dropdown"
  >
    <a
      className="dropdown-toggle"
      data-toggle="dropdown"
      href="#"
      id="component-navigation-admin"
    >
      layout.settings
       
      <i
        className="icon-dropdown"
      />
    </a>
    <ul
      className="dropdown-menu"
    >
      <li
        key="project_delete"
      >
        <Link
          activeClassName="active"
          onlyActiveOnIndex={false}
          style={Object {}}
          to={
            Object {
              "pathname": "/project/deletion",
              "query": Object {
                "id": "foo",
              },
            }
          }
        >
          deletion.page
        </Link>
      </li>
    </ul>
  </li>
</NavBarTabs>
`;

exports[`should work for long-living branches 1`] = `
<NavBarTabs>
  <li>
    <Link
      activeClassName="active"
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/dashboard",
          "query": Object {
            "branch": "release",
            "id": "foo",
          },
        }
      }
    >
      overview.page
    </Link>
  </li>
  <li>
    <Link
      activeClassName="active"
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/project/issues",
          "query": Object {
            "branch": "release",
            "id": "foo",
            "resolved": "false",
          },
        }
      }
    >
      issues.page
    </Link>
  </li>
  <li>
    <Link
      activeClassName="active"
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/component_measures",
          "query": Object {
            "branch": "release",
            "id": "foo",
          },
        }
      }
    >
      layout.measures
    </Link>
  </li>
  <li>
    <Link
      activeClassName="active"
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/code",
          "query": Object {
            "branch": "release",
            "id": "foo",
          },
        }
      }
    >
      code.page
    </Link>
  </li>
  <li>
    <Link
      activeClassName="active"
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/project/activity",
          "query": Object {
            "branch": "release",
            "id": "foo",
          },
        }
      }
    >
      project_activity.page
    </Link>
  </li>
</NavBarTabs>
`;

exports[`should work for long-living branches 2`] = `
<NavBarTabs>
  <li>
    <Link
      activeClassName="active"
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/dashboard",
          "query": Object {
            "branch": "release",
            "id": "foo",
          },
        }
      }
    >
      overview.page
    </Link>
  </li>
  <li>
    <Link
      activeClassName="active"
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/project/issues",
          "query": Object {
            "branch": "release",
            "id": "foo",
            "resolved": "false",
          },
        }
      }
    >
      issues.page
    </Link>
  </li>
  <li>
    <Link
      activeClassName="active"
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/component_measures",
          "query": Object {
            "branch": "release",
            "id": "foo",
          },
        }
      }
    >
      layout.measures
    </Link>
  </li>
  <li>
    <Link
      activeClassName="active"
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/code",
          "query": Object {
            "branch": "release",
            "id": "foo",
          },
        }
      }
    >
      code.page
    </Link>
  </li>
  <li>
    <Link
      activeClassName="active"
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/project/activity",
          "query": Object {
            "branch": "release",
            "id": "foo",
          },
        }
      }
    >
      project_activity.page
    </Link>
  </li>
</NavBarTabs>
`;

exports[`should work for short-living branches 1`] = `
<NavBarTabs>
  <li>
    <Link
      activeClassName="active"
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/project/issues",
          "query": Object {
            "branch": "feature",
            "id": "foo",
            "resolved": "false",
          },
        }
      }
    >
      issues.page
    </Link>
  </li>
  <li>
    <Link
      activeClassName="active"
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/code",
          "query": Object {
            "branch": "feature",
            "id": "foo",
          },
        }
      }
    >
      code.page
    </Link>
  </li>
</NavBarTabs>
`;

exports[`should work with extensions 1`] = `
<NavBarTabs>
  <li>
    <Link
      activeClassName="active"
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/dashboard",
          "query": Object {
            "branch": undefined,
            "id": "foo",
          },
        }
      }
    >
      overview.page
    </Link>
  </li>
  <li>
    <Link
      activeClassName="active"
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/project/issues",
          "query": Object {
            "branch": undefined,
            "id": "foo",
            "resolved": "false",
          },
        }
      }
    >
      issues.page
    </Link>
  </li>
  <li>
    <Link
      activeClassName="active"
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/component_measures",
          "query": Object {
            "branch": undefined,
            "id": "foo",
          },
        }
      }
    >
      layout.measures
    </Link>
  </li>
  <li>
    <Link
      activeClassName="active"
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/code",
          "query": Object {
            "branch": undefined,
            "id": "foo",
          },
        }
      }
    >
      code.page
    </Link>
  </li>
  <li>
    <Link
      activeClassName="active"
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/project/activity",
          "query": Object {
            "branch": undefined,
            "id": "foo",
          },
        }
      }
    >
      project_activity.page
    </Link>
  </li>
  <li
    className="dropdown"
  >
    <a
      className="dropdown-toggle"
      data-toggle="dropdown"
      href="#"
      id="component-navigation-admin"
    >
      layout.settings
       
      <i
        className="icon-dropdown"
      />
    </a>
    <ul
      className="dropdown-menu"
    >
      <li
        key="settings"
      >
        <Link
          activeClassName="active"
          onlyActiveOnIndex={false}
          style={Object {}}
          to={
            Object {
              "pathname": "/project/settings",
              "query": Object {
                "branch": undefined,
                "id": "foo",
              },
            }
          }
        >
          project_settings.page
        </Link>
      </li>
      <li
        key="branches"
      >
        <Link
          activeClassName="active"
          onlyActiveOnIndex={false}
          style={Object {}}
          to={
            Object {
              "pathname": "/project/branches",
              "query": Object {
                "id": "foo",
              },
            }
          }
        >
          project_branches.page
        </Link>
      </li>
      <li
        key="foo"
      >
        <Link
          activeClassName="active"
          onlyActiveOnIndex={false}
          style={Object {}}
          to={
            Object {
              "pathname": "/project/admin/extension/foo",
              "query": Object {
                "id": "foo",
              },
            }
          }
        >
          Foo
        </Link>
      </li>
      <li
        key="project_delete"
      >
        <Link
          activeClassName="active"
          onlyActiveOnIndex={false}
          style={Object {}}
          to={
            Object {
              "pathname": "/project/deletion",
              "query": Object {
                "id": "foo",
              },
            }
          }
        >
          deletion.page
        </Link>
      </li>
    </ul>
  </li>
  <li
    className="dropdown"
  >
    <a
      className="dropdown-toggle"
      data-toggle="dropdown"
      href="#"
      id="component-navigation-more"
    >
      more
       
      <i
        className="icon-dropdown"
      />
    </a>
    <ul
      className="dropdown-menu"
    >
      <li
        key="component-foo"
      >
        <Link
          activeClassName="active"
          onlyActiveOnIndex={false}
          style={Object {}}
          to={
            Object {
              "pathname": "/project/extension/component-foo",
              "query": Object {
                "id": "foo",
              },
            }
          }
        >
          ComponentFoo
        </Link>
      </li>
    </ul>
  </li>
</NavBarTabs>
`;

exports[`should work with multiple extensions 1`] = `
<NavBarTabs>
  <li>
    <Link
      activeClassName="active"
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/dashboard",
          "query": Object {
            "branch": undefined,
            "id": "foo",
          },
        }
      }
    >
      overview.page
    </Link>
  </li>
  <li>
    <Link
      activeClassName="active"
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/project/issues",
          "query": Object {
            "branch": undefined,
            "id": "foo",
            "resolved": "false",
          },
        }
      }
    >
      issues.page
    </Link>
  </li>
  <li>
    <Link
      activeClassName="active"
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/component_measures",
          "query": Object {
            "branch": undefined,
            "id": "foo",
          },
        }
      }
    >
      layout.measures
    </Link>
  </li>
  <li>
    <Link
      activeClassName="active"
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/code",
          "query": Object {
            "branch": undefined,
            "id": "foo",
          },
        }
      }
    >
      code.page
    </Link>
  </li>
  <li>
    <Link
      activeClassName="active"
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/project/activity",
          "query": Object {
            "branch": undefined,
            "id": "foo",
          },
        }
      }
    >
      project_activity.page
    </Link>
  </li>
  <li
    className="dropdown"
  >
    <a
      className="dropdown-toggle"
      data-toggle="dropdown"
      href="#"
      id="component-navigation-admin"
    >
      layout.settings
       
      <i
        className="icon-dropdown"
      />
    </a>
    <ul
      className="dropdown-menu"
    >
      <li
        key="settings"
      >
        <Link
          activeClassName="active"
          onlyActiveOnIndex={false}
          style={Object {}}
          to={
            Object {
              "pathname": "/project/settings",
              "query": Object {
                "branch": undefined,
                "id": "foo",
              },
            }
          }
        >
          project_settings.page
        </Link>
      </li>
      <li
        key="branches"
      >
        <Link
          activeClassName="active"
          onlyActiveOnIndex={false}
          style={Object {}}
          to={
            Object {
              "pathname": "/project/branches",
              "query": Object {
                "id": "foo",
              },
            }
          }
        >
          project_branches.page
        </Link>
      </li>
      <li
        key="foo"
      >
        <Link
          activeClassName="active"
          onlyActiveOnIndex={false}
          style={Object {}}
          to={
            Object {
              "pathname": "/project/admin/extension/foo",
              "query": Object {
                "id": "foo",
              },
            }
          }
        >
          Foo
        </Link>
      </li>
      <li
        key="bar"
      >
        <Link
          activeClassName="active"
          onlyActiveOnIndex={false}
          style={Object {}}
          to={
            Object {
              "pathname": "/project/admin/extension/bar",
              "query": Object {
                "id": "foo",
              },
            }
          }
        >
          Bar
        </Link>
      </li>
      <li
        key="project_delete"
      >
        <Link
          activeClassName="active"
          onlyActiveOnIndex={false}
          style={Object {}}
          to={
            Object {
              "pathname": "/project/deletion",
              "query": Object {
                "id": "foo",
              },
            }
          }
        >
          deletion.page
        </Link>
      </li>
    </ul>
  </li>
  <li
    className="dropdown"
  >
    <a
      className="dropdown-toggle"
      data-toggle="dropdown"
      href="#"
      id="component-navigation-more"
    >
      more
       
      <i
        className="icon-dropdown"
      />
    </a>
    <ul
      className="dropdown-menu"
    >
      <li
        key="component-foo"
      >
        <Link
          activeClassName="active"
          onlyActiveOnIndex={false}
          style={Object {}}
          to={
            Object {
              "pathname": "/project/extension/component-foo",
              "query": Object {
                "id": "foo",
              },
            }
          }
        >
          ComponentFoo
        </Link>
      </li>
      <li
        key="component-bar"
      >
        <Link
          activeClassName="active"
          onlyActiveOnIndex={false}
          style={Object {}}
          to={
            Object {
              "pathname": "/project/extension/component-bar",
              "query": Object {
                "id": "foo",
              },
            }
          }
        >
          ComponentBar
        </Link>
      </li>
    </ul>
  </li>
</NavBarTabs>
`;
